portfolio desktop + mobile

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,10 +10,93 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,700,900&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/oqk1btd.css">
     <link rel="stylesheet" href="https://use.typekit.net/awq5rwn.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500&display=swap" rel="stylesheet">
 </head>
 
+
 <body>
+    <header>
+        <!-------------MENU----------------->
+        <!---Desktop Menu START---->
+        <div class="siteheader">
+
+            <a href="index.html">
+                <img class="logo" src="pictures/SVG/logo1.png" alt="logo"></a>
+            <nav>
+                <a href="portfolio.html" class="portfolie">PORTFOLIO</a>
+                <a href="om.html">OM</a>
+                <a href="kontakt.html">KONTAKT</a>
+            </nav>
+
+        </div>
+        <!---Desktop Menu SLUT ---->
+        <!---Mobil menu START ---->
+
+        <div class="mobilenav">
+            <nav>
+                <div id="menuknap">☰</div>
+                <ul id="menu" class="hidden">
+                    <li><a href="portfolio.html">PORTFOLIO</a></li>
+                    <li> <a href="om.html">OM</a></li>
+                    <li><a href="kontakt.html">KONTAKT</a></li>
+                </ul>
+
+            </nav>
+        </div>
+        <!---Mobil menu SLUT ---->
+    </header>
+    <section id="portfolio">
+        <h1>P O R T F O L I O</h1>
+        <div class="sectionwrapper">
+
+            <div class="col">
+                <img src="pictures/SVG/1x/webbox_3.png" alt="box">
+                <div class="centered">
+                    <h2>GRUNDLÆGGENDE</h2>
+                </div>
+                <div class="colorboxtext">
+                    WEB
+                </div>
+
+
+
+            </div>
+            <div class="col">
+                <img src="pictures/SVG/1x/uxbox_3.png" alt="box">
+                <div class="centered">
+                    <h2>GRUNDLÆGGENDE</h2>
+                </div>
+                <div class="colorboxtext">
+                    UX
+                </div>
+
+            </div>
+            <div class="col">
+                <img src="pictures/SVG/1x/animationbox_3.png" alt="box">
+                <div class="centered">
+                    <h2>GRUNDLÆGGENDE</h2>
+                </div>
+                <div class="colorboxtext">
+                    ANIMATION
+                </div>
+
+            </div>
+            <div class="col">
+                <img src="pictures/SVG/1x/indholdbox_3.png" alt=box>
+                <div class="centered">
+                    <h2>GRUNDLÆGGENDE</h2>
+                </div>
+                <div class="colorboxtext">
+                    INDHOLD
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+
     <script src="script.js"></script>
+    <footer>Andrea Valgeirsdottir</footer>
 </body>
 
 </html>
