--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <a href="index.html">
             <!-- <img src="pictures/SVG/logo1.png" alt="logo">--> </a>
         <nav>
-            <a href="portfolio.html" class="portfolie"> PORTFOLIO | </a>
-            <a href="om.html">OM |</a>
+            <a href="portfolio.html" class="portfolie"> PORTFOLIO</a>
+            <a href="om.html">OM </a>
             <a href="kontakt.html">KONTAKT</a>
         </nav>
 
