--- a/indhold.html
+++ b/indhold.html
@@ -46,8 +46,9 @@
         <!---Mobil menu SLUT ---->
     </header>
     <section id="indhold">
+        <h2>Grundlæggende</h2>
         <h1>INDHOLD</h1>
-        <h2>Postmodernisme</h2>
+
         <div class="sectionwrapper">
 
 
