--- a/ux.html
+++ b/ux.html
@@ -46,8 +46,9 @@
         <!---Mobil menu SLUT ---->
     </header>
     <section id="ux">
+        <h2>Grundlæggende</h2>
         <h1>UX</h1>
-        <h2>Postmodernisme</h2>
+
         <div class="sectionwrapper">
 
 
