--- a/web.html
+++ b/web.html
@@ -46,8 +46,8 @@
         <!---Mobil menu SLUT ---->
     </header>
     <section id="web">
+        <h2>Grundlæggende</h2>
         <h1>WEB</h1>
-        <h2>Postmodernisme</h2>
         <div class="sectionwrapper">
 
 
