web.html mobile+desktop klar

--- a/web.html
+++ b/web.html
@@ -45,10 +45,25 @@
         </div>
         <!---Mobil menu SLUT ---->
     </header>
+    <a class="margin" href="portfolio.html">
+        <img class="arrow_smaller margin" src="pictures/SVG/backarrow.png">
+    </a>
     <section id="web">
-        <h2>Grundlæggende</h2>
-        <h1>WEB</h1>
+        <div class=splash_container>
+            <div class=web_splash>
+                <h2>Grundlæggende</h2>
+                <h1>WEB</h1>
+            </div>
+            <div class=web_splash>
+                <img src="pictures/SVG/webcollage.png" alt="webcollage">
+            </div>
+        </div>
+        <img class="arrow_small center beat" src="pictures/SVG/downarrow.png" alt="downarrow">
         <div class="sectionwrapper">
+
+
+
+
 
 
 
