ux.html mobile + desktop klar

--- a/ux.html
+++ b/ux.html
@@ -45,9 +45,21 @@
         </div>
         <!---Mobil menu SLUT ---->
     </header>
+    <a class="margin" href="portfolio.html">
+        <img class="arrow_smaller margin" src="pictures/SVG/backarrow.png">
+    </a>
     <section id="ux">
-        <h2>Grundlæggende</h2>
-        <h1>UX</h1>
+        <div class=splash_container>
+            <div class=web_splash>
+                <h2>Grundlæggende</h2>
+                <h1>UX</h1>
+            </div>
+            <div class=web_splash>
+                <img src="pictures/SVG/uxcollage.svg" alt="uxcollage">
+            </div>
+        </div>
+        <img class="arrow_small center beat" src="pictures/SVG/downarrow.png" alt="downarrow">
+
 
         <div class="sectionwrapper">
 
