animation.html  mobile + desktop klar

--- a/animation.html
+++ b/animation.html
@@ -45,13 +45,24 @@
         </div>
         <!---Mobil menu SLUT ---->
     </header>
+    <a class="margin" href="portfolio.html">
+        <img class="arrow_smaller margin" src="pictures/SVG/backarrow.png">
+    </a>
     <section id="animation">
-        <h2>Grundlæggende</h2>
-        <h1>ANIMATION</h1>
+        <div class="blueman_container position0 position1 moveBlueman"></div>
+        <div class=splash_container>
+            <div class=web_splash>
+                <h2>Grundlæggende</h2>
+                <h1>ANIMATION</h1>
+            </div>
+            <div class=web_splash>
+                <p></p>
+            </div>
+        </div>
+        <img class="arrow_small center beat" src="pictures/SVG/downarrow.png" alt="downarrow">
+
 
         <div class="sectionwrapper">
-
-
 
             <div class="col">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum voluptatibus vitae consectetur ipsa commodi, hic distinctio tempora laudantium ut repellendus ratione numquam consequatur nobis minus dolores corporis sed. Temporibus, maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus provident consectetur accusamus, molestiae dolores reiciendis, nisi porro doloremque itaque minima natus pariatur harum fuga beatae tempore recusandae dignissimos repudiandae maiores? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia et, cumque sed dignissimos maiores nemo dolorem vero, veniam voluptas mollitia. Sed quam molestiae maiores esse voluptates veniam, sapiente laboriosam veritatis!</p>
