Rettelser af animation.html og ui kit på alle sider

--- a/indhold.html
+++ b/indhold.html
@@ -45,9 +45,34 @@
         </div>
         <!---Mobil menu SLUT ---->
     </header>
+    <a class="margin" href="portfolio.html">
+        <img class="arrow_smaller margin" src="pictures/SVG/backarrow.png">
+    </a>
     <section id="indhold">
-        <h2>Grundlæggende</h2>
-        <h1>INDHOLD</h1>
+        <div class="splash_container left">
+            <div class="web_splash">
+                <h2>Grundlæggende</h2>
+                <h1>INDHOLD</h1>
+            </div>
+            <div class="web_splash right">
+                <div class="slideshow pic1_slide hide">
+                </div>
+
+                <div class="slideshow pic2_slide hide">
+                </div>
+
+                <div class="slideshow pic3_slide hide">
+                </div>
+                <div class="slideshow pic4_slide hide">
+                </div>
+                <div class="slideshow pic5_slide hide">
+                </div>
+
+
+            </div>
+        </div>
+        <img class="arrow_small center beat" src="pictures/SVG/downarrow.png" alt="downarrow">
+
 
         <div class="sectionwrapper">
 
@@ -76,6 +101,7 @@
     </section>
 
     <script src="script.js"></script>
+    <script src="indhold.js"></script>
     <footer>Andrea Valgeirsdottir</footer>
 </body>
 
