footer + små rettelser

--- a/animation.html
+++ b/animation.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
     <title>Portfolio</title>
+    <link rel="icon" type="image/png" href="pictures/SVG/favikonfinal.png">
+
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,700,900&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/oqk1btd.css">
@@ -20,8 +22,11 @@
         <!---Desktop Menu START---->
         <div class="siteheader">
 
-            <a href="index.html">
-                <img class="logo" src="pictures/SVG/logo1.png" alt="logo"></a>
+            <span class="word">
+                <a class=logo href="portfolio.html">
+                    <span class="font_weight">ANDRE </span> <span class="rotate_logo">A</span> <span class="font_weight"> ALGEIRSDÓTTIR</span>
+                </a>
+            </span>
             <nav>
                 <a href="portfolio.html" class="portfolie">PORTFOLIO</a>
                 <a href="om.html">OM</a>
@@ -49,14 +54,26 @@
         <img class="arrow_smaller margin" src="pictures/SVG/backarrow.png">
     </a>
     <section id="animation">
-        <div class="blueman_container position0 position1 moveBlueman"></div>
+        <div class="blueman_container position0 position1 moveBlueman delay10"></div>
         <div class=splash_container>
             <div class=web_splash>
                 <h2>Grundlæggende</h2>
-                <h1>ANIMATION</h1>
+                <div class="word">
+                    <h1>
+                        <span class="falling delay1">A</span>
+                        <span class="falling delay2">N</span>
+                        <span class="falling delay3">I</span>
+                        <span class="falling delay4">M</span>
+                        <span class="falling delay5">A</span>
+                        <span class="falling delay6">T</span>
+                        <span class="falling delay7">I</span>
+                        <span class="falling delay8">O</span>
+                        <span class="falling delay9">N</span>
+
+                    </h1>
+                </div>
             </div>
             <div class=web_splash>
-                <p></p>
             </div>
         </div>
         <img class="arrow_small center beat" src="pictures/SVG/downarrow.png" alt="downarrow">
@@ -87,7 +104,23 @@
     </section>
 
     <script src="script.js"></script>
-    <footer>Andrea Valgeirsdottir</footer>
+    <footer>
+        <div class="sectionwrapper">
+            <div class="col">
+                <h2>CONTACT</h2>
+                <p>Phone: +45 42 32 63 24 Mail:<a href="mailto:andr60c0@stud.kea.dk">andr60c0(at)stud.kea.dk</a></p>
+            </div>
+            <div class="col">
+                <h2>FOLLOW</h2>
+                <div class="col">
+                    <a href="https://www.facebook.com/andrea.valgeirsdottir.1" target="_blank"><img src="pictures/SVG/facebook.svg" alt="Facebook"></a>
+                    <a href="https://www.instagram.com/andreavalgeirs/?hl=en"><img src="pictures/SVG/instagram.svg" alt="Instagram"></a>
+                </div>
+
+            </div>
+        </div>
+
+    </footer>
 </body>
 
 </html>
