--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
     <title>Portfolio</title>
+    <link rel="icon" type="image/png" href="pictures/SVG/favikonfinal.png">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,700,900&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/oqk1btd.css">
@@ -19,9 +20,11 @@
         <!-------------MENU----------------->
         <!---Desktop Menu START---->
         <div class="siteheader">
-
-            <a href="index.html">
-                <img class="logo" src="pictures/SVG/logo1.png" alt="logo"></a>
+            <span class="word">
+                <a class=logo href="portfolio.html">
+                    <span class="font_weight">ANDRE </span> <span class="rotate_logo">A</span> <span class="font_weight"> ALGEIRSDÓTTIR</span>
+                </a>
+            </span>
             <nav>
                 <a href="portfolio.html" class="portfolie">PORTFOLIO</a>
                 <a href="om.html">OM</a>
@@ -51,7 +54,7 @@
 
             <div class="col">
                 <a href="web.html">
-                    <img src="pictures/SVG/1x/webbox_3.png" alt="box">
+                    <img src="pictures/SVG/webbox_3.png" alt="box">
                     <div class="centered">
                         <h2>GRUNDLÆGGENDE</h2>
                     </div>
@@ -64,7 +67,7 @@
             </div>
             <div class="col">
                 <a href="ux.html">
-                    <img src="pictures/SVG/1x/uxbox_3.png" alt="box">
+                    <img src="pictures/SVG/uxbox_3.png" alt="box">
                     <div class="centered">
                         <h2>GRUNDLÆGGENDE</h2>
                     </div>
@@ -75,7 +78,7 @@
             </div>
             <div class="col">
                 <a href="animation.html">
-                    <img src="pictures/SVG/1x/animationbox_3.png" alt="box">
+                    <img src="pictures/SVG/animationbox_3.png" alt="box">
                     <div class="centered">
                         <h2>GRUNDLÆGGENDE</h2>
                     </div>
@@ -86,7 +89,7 @@
             </div>
             <div class="col">
                 <a href="indhold.html">
-                    <img src="pictures/SVG/1x/indholdbox_3.png" alt=box>
+                    <img src="pictures/SVG/indholdbox_3.png" alt=box>
                     <div class="centered">
                         <h2>GRUNDLÆGGENDE</h2>
                     </div>
@@ -100,7 +103,23 @@
     </section>
 
     <script src="script.js"></script>
-    <footer>Andrea Valgeirsdottir</footer>
+    <footer>
+        <div class="sectionwrapper">
+            <div class="col">
+                <h2>CONTACT</h2>
+                <p>Phone: +45 42 32 63 24 Mail:<a href="mailto:andr60c0@stud.kea.dk">andr60c0(at)stud.kea.dk</a></p>
+            </div>
+            <div class="col">
+                <h2>FOLLOW</h2>
+                <div class="col">
+                    <a href="https://www.facebook.com/andrea.valgeirsdottir.1" target="_blank"><img src="pictures/SVG/facebook.svg" alt="Facebook"></a>
+                    <a href="https://www.instagram.com/andreavalgeirs/?hl=en"><img src="pictures/SVG/instagram.svg" alt="Instagram"></a>
+                </div>
+
+            </div>
+        </div>
+
+    </footer>
 </body>
 
 </html>
