--- a/web.html
+++ b/web.html
@@ -38,6 +38,11 @@
         <!---Mobil menu START ---->
 
         <div class="mobilenav">
+            <span class="word">
+                <a class=logo href="portfolio.html">
+                    <span class="font_weight">ANDRE </span> <span class="rotate_logo">A</span> <span class="font_weight"> ALGEIRSDÓTTIR</span>
+                </a>
+            </span>
             <nav>
                 <div id="menuknap">☰</div>
                 <ul id="menu" class="hidden">
