--- a/indhold.html
+++ b/indhold.html
@@ -29,8 +29,7 @@
             </span>
             <nav>
                 <a href="portfolio.html" class="portfolie">PORTFOLIO</a>
-                <a href="om.html">OM</a>
-                <a href="kontakt.html">KONTAKT</a>
+                <a href="om.html">OM MIG</a>
             </nav>
 
         </div>
@@ -47,8 +46,7 @@
                 <div id="menuknap">☰</div>
                 <ul id="menu" class="hidden">
                     <li><a href="portfolio.html">PORTFOLIO</a></li>
-                    <li> <a href="om.html">OM</a></li>
-                    <li><a href="kontakt.html">KONTAKT</a></li>
+                    <li> <a href="om.html">OM MIG</a></li>
                 </ul>
 
             </nav>
@@ -90,13 +88,11 @@
 
             <div class="col">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum voluptatibus vitae consectetur ipsa commodi, hic distinctio tempora laudantium ut repellendus ratione numquam consequatur nobis minus dolores corporis sed. Temporibus, maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus provident consectetur accusamus, molestiae dolores reiciendis, nisi porro doloremque itaque minima natus pariatur harum fuga beatae tempore recusandae dignissimos repudiandae maiores? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia et, cumque sed dignissimos maiores nemo dolorem vero, veniam voluptas mollitia. Sed quam molestiae maiores esse voluptates veniam, sapiente laboriosam veritatis!</p>
-                <div class="stilartsite_button">
-                    <p>Se stilartsite<p>
+                <div class="button">
+                    <a href="#">Se stilartsite</a>
+                    <a href="#">Se stilartsite</a>
                 </div>
-                <div class="stilartdokumentation_button">
-                    <p>Se dokumentation</p>
 
-                </div>
 
             </div>
             <div class="col">
