--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,7 @@
             </span>
             <nav>
                 <a href="portfolio.html" class="portfolie">PORTFOLIO</a>
-                <a href="om.html">OM</a>
-                <a href="kontakt.html">KONTAKT</a>
+                <a href="om.html">OM MIG</a>
             </nav>
 
         </div>
@@ -45,8 +44,8 @@
                 <div id="menuknap">☰</div>
                 <ul id="menu" class="hidden">
                     <li><a href="portfolio.html">PORTFOLIO</a></li>
-                    <li> <a href="om.html">OM</a></li>
-                    <li><a href="kontakt.html">KONTAKT</a></li>
+                    <li> <a href="om.html">OM MIG</a></li>
+
                 </ul>
 
             </nav>
