--- a/ux.html
+++ b/ux.html
@@ -29,8 +29,7 @@
             </span>
             <nav>
                 <a href="portfolio.html" class="portfolie">PORTFOLIO</a>
-                <a href="om.html">OM</a>
-                <a href="kontakt.html">KONTAKT</a>
+                <a href="om.html">OM MIG</a>
             </nav>
 
         </div>
@@ -38,6 +37,9 @@
         <!---Mobil menu START ---->
 
         <div class="mobilenav">
+            <a class="margin" href="portfolio.html">
+                <img class="arrow_smaller margin" src="pictures/SVG/backarrow.png" alt="backarrow">
+            </a>
             <span class="word">
                 <a class=logo href="portfolio.html">
                     <span class="font_weight">ANDRE </span> <span class="rotate_logo">A</span> <span class="font_weight"> ALGEIRSDÓTTIR</span>
@@ -47,8 +49,7 @@
                 <div id="menuknap">☰</div>
                 <ul id="menu" class="hidden">
                     <li><a href="portfolio.html">PORTFOLIO</a></li>
-                    <li> <a href="om.html">OM</a></li>
-                    <li><a href="kontakt.html">KONTAKT</a></li>
+                    <li> <a href="om.html">OM MIG</a></li>
                 </ul>
 
             </nav>
@@ -56,7 +57,7 @@
         <!---Mobil menu SLUT ---->
     </header>
     <a class="margin" href="portfolio.html">
-        <img class="arrow_smaller margin" src="pictures/SVG/backarrow.png">
+        <img class="arrow_smaller margin" src="pictures/SVG/backarrow.png" alt="backarrow">
     </a>
     <section id="ux">
         <div class=splash_container>
@@ -77,13 +78,11 @@
 
             <div class="col">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum voluptatibus vitae consectetur ipsa commodi, hic distinctio tempora laudantium ut repellendus ratione numquam consequatur nobis minus dolores corporis sed. Temporibus, maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus provident consectetur accusamus, molestiae dolores reiciendis, nisi porro doloremque itaque minima natus pariatur harum fuga beatae tempore recusandae dignissimos repudiandae maiores? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia et, cumque sed dignissimos maiores nemo dolorem vero, veniam voluptas mollitia. Sed quam molestiae maiores esse voluptates veniam, sapiente laboriosam veritatis!</p>
-                <div class="stilartsite_button">
-                    <p>Se stilartsite<p>
+                <div class="button">
+                    <a href="#">Se prototype</a>
+                    <a href="#">Se dokumentation</a>
                 </div>
-                <div class="stilartdokumentation_button">
-                    <p>Se dokumentation</p>
 
-                </div>
 
             </div>
             <div class="col">
