web temaindhold klar mobil+desktop

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
         <div class="siteheader">
             <span class="word">
                 <a class=logo href="portfolio.html">
-                    <span class="font_weight">ANDRE </span> <span class="rotate_logo">A</span> <span class="font_weight"> ALGEIRSDÓTTIR</span>
+                    <span class="font_weight">ANDRE</span> <span class="rotate_logo">A</span> <span class="font_weight">ALGEIRSDÓTTIR</span>
                 </a>
             </span>
             <nav>
@@ -54,16 +54,18 @@
     </header>
     <section id="portfolio">
         <h1>P O R T F O L I O</h1>
+
+
         <div class="sectionwrapper">
 
             <div class="col">
                 <a href="web.html">
-                    <img src="pictures/SVG/webbox_3.png" alt="box">
+                    <img src="pictures/SVG/websplash2.svg" alt="websplash">
                     <div class="centered">
                         <h2>GRUNDLÆGGENDE</h2>
                     </div>
                     <div class="colorboxtext">
-                        WEB
+                        <span class=sizeup>WEB</span>
                     </div>
                 </a>
 
@@ -71,7 +73,7 @@
             </div>
             <div class="col">
                 <a href="ux.html">
-                    <img src="pictures/SVG/uxbox_3.png" alt="box">
+                    <img src="pictures/SVG/uxsplash2.svg" alt="uxsplash">
                     <div class="centered">
                         <h2>GRUNDLÆGGENDE</h2>
                     </div>
@@ -82,7 +84,7 @@
             </div>
             <div class="col">
                 <a href="animation.html">
-                    <img src="pictures/SVG/animationbox_3.png" alt="box">
+                    <img src="pictures/SVG/animationsplash2.svg" alt="animationsplash">
                     <div class="centered">
                         <h2>GRUNDLÆGGENDE</h2>
                     </div>
@@ -93,7 +95,7 @@
             </div>
             <div class="col">
                 <a href="indhold.html">
-                    <img src="pictures/SVG/indholdbox_3.png" alt=box>
+                    <img src="pictures/SVG/indholdsplash2.svg" alt=indholdsplash>
                     <div class="centered">
                         <h2>GRUNDLÆGGENDE</h2>
                     </div>
