--- a/web.html
+++ b/web.html
@@ -70,24 +70,18 @@
         <div class="sectionwrapper">
 
             <div class="col">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum voluptatibus vitae consectetur ipsa commodi, hic distinctio tempora laudantium ut repellendus ratione numquam consequatur nobis minus dolores corporis sed. Temporibus, maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus provident consectetur accusamus, molestiae dolores reiciendis, nisi porro doloremque itaque minima natus pariatur harum fuga beatae tempore recusandae dignissimos repudiandae maiores? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia et, cumque sed dignissimos maiores nemo dolorem vero, veniam voluptas mollitia. Sed quam molestiae maiores esse voluptates veniam, sapiente laboriosam veritatis!</p>
+                <h3>Tema 1 - Grundlæggende web</h3>
+                <p>I tema 1 har vi lært om forskellige stilarter og layoutprincipper. Vi fik tildelt forskellige stilarter, hvor vi så skulle designe en hjemmeside som ville give udtryk for den tildelte stilart. Jeg fik postmodernisme og har derfor valgt at fokusere på stærke farver, varierende former og iøjenfaldende linjer, for at få de postmodernistiske udtryk frem. For at gøre sitet responsivt lært vi om flexbox og media queries. Det har jeg benyttet mig af, for at få design og indhold til at passe til de forskellige skærmstørrelser.</p>
                 <div class="button">
                     <a href="http://www.mmd-andrea.dk/kea/02_web/04_responsive/02_04_01_responsive_site_v2/index.html">Se stilartsite</a>
                     <a href="http://www.mmd-andrea.dk/kea/02_web/04_responsive/02_04_01_responsive_site_v2/styletile.html">Se dokumentation</a>
                 </div>
-
-
-
-
             </div>
-
-
-
 
             <div class="col">
                 <figure>
-                    <img src="pictures/SVG/quirky.png" alt="quirky">
-                    <figcaption>Billedtekst</figcaption>
+                    <img src="pictures/SVG/webStyletile.svg" alt="webstyletile">
+                    <figcaption>Inspiration til stilartsite.</figcaption>
                 </figure>
             </div>
 
