--- a/ux.html
+++ b/ux.html
@@ -77,7 +77,55 @@
 
 
             <div class="col">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum voluptatibus vitae consectetur ipsa commodi, hic distinctio tempora laudantium ut repellendus ratione numquam consequatur nobis minus dolores corporis sed. Temporibus, maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus provident consectetur accusamus, molestiae dolores reiciendis, nisi porro doloremque itaque minima natus pariatur harum fuga beatae tempore recusandae dignissimos repudiandae maiores? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia et, cumque sed dignissimos maiores nemo dolorem vero, veniam voluptas mollitia. Sed quam molestiae maiores esse voluptates veniam, sapiente laboriosam veritatis!</p>
+                <h3>Tema 2 - Grundlæggende UX</h3>
+                <p>I tema 2 lært vi om user experience. I denne periode havde vi fire moduler som vi gik igennem - data, indhold, prototype og designsprint. I de første to moduler blev vi introduceret for forskellige research og analyse metoder, samt værktøjer til at optimere brugeroplevelse. Den viden tog vi så videre med os til de næste to moduler, hvor vi fik udarbejdet to prototyper i Adobe XD. Den første individuelt på en webshop prototype, og derefter arbejde i grupper på en prototype, hvor udgangspunktet var at forbedre et problematisk område som kan opstå for studerende på KEA. </p>
+
+
+            </div>
+
+        </div>
+        <div class="sectionwrapper">
+
+            <div class="col_left">
+                <h3>Individuel prototype</h3>
+                <p> I denne opgave blev vi introduceret for
+                    LoFi - HiFi
+                    Styletile
+                    UIkit
+                    Copy og microcopy
+                    klikbar prototype transitions </p>
+                <div class="button">
+                    <a href="https://xd.adobe.com/view/234c288d-5b5c-4214-66e6-8b2906c9ebc4-557d/">Se prototype</a>
+                    <a href="pictures/SVG/ux_webshop_styletile.svg">Se dokumentation</a>
+                </div>
+
+
+            </div>
+            <div class="col_right">
+                <div class="col_pic">
+                    <figure>
+                        <img src="pictures/SVG/ux_prototypepic.svg" alt="ux_prototypepic">
+                        <figcaption>Screenshots af webshop</figcaption>
+                    </figure>
+                </div>
+                <div class="col_pic">
+                    <figure>
+
+                        <img src="pictures/SVG/ux_prototypepic2.svg" alt="ux_prototypepic2">
+
+                    </figure>
+
+
+
+                </div>
+            </div>
+
+        </div>
+        <div class="sectionwrapper">
+
+            <div class="col_left">
+                <h3>Gruppe prototype</h3>
+                <p>krkrkrkr </p>
                 <div class="button">
                     <a href="#">Se prototype</a>
                     <a href="#">Se dokumentation</a>
@@ -85,14 +133,27 @@
 
 
             </div>
-            <div class="col">
-                <figure>
-                    <img src="pictures/SVG/quirky.png" alt="quirky">
-                    <figcaption>Billedtekst</figcaption>
-                </figure>
+            <div class="col_right">
+                <div class="col_pic">
+                    <figure>
+                        <img src="pictures/SVG/ux_prototypepic.svg" alt="ux_prototypepic">
+                        <figcaption>Screenshots af webshop</figcaption>
+                    </figure>
+                </div>
+                <div class="col_pic">
+                    <figure>
+
+                        <img src="pictures/SVG/ux_prototypepic2.svg" alt="ux_prototypepic2">
+
+                    </figure>
+
+
+
+                </div>
             </div>
 
         </div>
+
 
     </section>
 
